[WWW-70] checks already sent case